--- a/wercker.yml
+++ b/wercker.yml
@@ -34,3 +34,7 @@ dockerize:
         name: dockerhub-push
         code: |
           curl -H "Content-Type: application/json" --data '{"build": true}' -X POST https://registry.hub.docker.com/u/$DOCKER_REPO/trigger/$DOCKER_HUB_TRIGGER/
+
+commit_checker:
+  steps:
+    - starefossen/git-commit-check@1.0.0
