--- a/wercker.yml
+++ b/wercker.yml
@@ -35,6 +35,6 @@ dockerize:
         code: |
           curl -H "Content-Type: application/json" --data '{"build": true}' -X POST https://registry.hub.docker.com/u/$DOCKER_REPO/trigger/$DOCKER_HUB_TRIGGER/
 
-commit_checker:
+commit-checker:
   steps:
     - starefossen/git-commit-check@1.0.0
