Cambios básicos para facilitar los tests

--- a/config/database.yml
+++ b/config/database.yml
@@ -9,8 +9,8 @@ development:
   <<: *default
   database: contact_list_development
   host: localhost
-  username: devuser
-  password: devuser
+  username: root
+  password: root
 
 test:
   <<: *default
