--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "5432:5432"
 
   web:
-    image: caballerojavier13/contact_list_app:latest
+    build: .
     container_name: contact_list_app
     command: >
       bash -c "sleep 10 && 
